--- a/links/components.json
+++ b/links/components.json
@@ -4,7 +4,7 @@
 	"rsc": true,
 	"tsx": true,
 	"tailwind": {
-		"config": "",
+		"config": "tailwind.config.ts",
 		"css": "app/globals.css",
 		"baseColor": "neutral",
 		"cssVariables": true,
@@ -17,11 +17,6 @@
 		"ui": "@/components/ui",
 		"lib": "@/lib",
 		"hooks": "@/hooks"
-	},
-	"css": {
-		"parser": {
-			"tailwindDirectives": true
-		}
 	},
 	"registries": {}
 }
