--- a/links/package.json
+++ b/links/package.json
@@ -17,6 +17,7 @@
 		"framer-motion": "^12.23.24",
 		"lucide-react": "^0.554.0",
 		"next": "16.0.3",
+		"next-themes": "^0.4.6",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"tailwind-merge": "^3.4.0"
